# biblioHack

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.crawler.yml  docker-compose.prod.yml  docker-compose.yml  goodreads_library_export.csv
backend/: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260528_0000_m1_initial.py  20260529_0001_authors_in_fts.py  20260529_0002_m2_availability_foundation.py  20260601_0003_literary_classification.py  20260603_0004_covers.py  20260604_0005_discovery_cursors.py  20260608_0006_widen_text_columns.py  20260608_0007_record_embeddings.py  20260608_0008_shelf_entries.py  20260610_0009_identity_users.py  20260610_0010_shelf_user_scope.py  20260610_0011_import_jobs.py  20260610_0012_recommendations.py  20260611_0013_record_genre.py  20260615_0014_record_relevance.py  20260617_0015_normalize_pub_year_sentinels.py  20260618_0016_canon_seed.py  20260620_0017_canon_ol_rating.py  20260622_0018_branch_geo.py  20260622_0019_user_followed_branches.py  20260622_0020_shelf_resolve_columns.py  20260625_0021_recommendation_inferred_tastes.py  20260626_0022_scrape_tasks_status_priority_titn_index.py
backend/src/bibliohack/: __init__.py
backend/src/bibliohack/availability/: __init__.py
backend/src/bibliohack/availability/application/: __init__.py  ports.py
backend/src/bibliohack/availability/domain/: __init__.py  snapshot.py  status.py
backend/src/bibliohack/availability/infrastructure/: __init__.py
backend/src/bibliohack/availability/interfaces/: __init__.py
backend/src/bibliohack/catalog/: __init__.py
backend/src/bibliohack/catalog/application/: __init__.py  dto.py  embedding_text.py  ports.py
backend/src/bibliohack/catalog/domain/: __init__.py  canon.py  contributor.py  isbn.py  literary_profile.py  media_filter.py  pub_year.py  record.py  relevance.py  titn.py
backend/src/bibliohack/catalog/infrastructure/: __init__.py
backend/src/bibliohack/catalog/interfaces/: __init__.py  cli.py
backend/src/bibliohack/covers/: __init__.py
backend/src/bibliohack/covers/application/: __init__.py  ports.py
backend/src/bibliohack/covers/domain/: __init__.py  cover.py
backend/src/bibliohack/covers/infrastructure/: __init__.py
backend/src/bibliohack/covers/interfaces/: __init__.py  cli.py
backend/src/bibliohack/holdings/: __init__.py
backend/src/bibliohack/holdings/application/: __init__.py  ports.py
backend/src/bibliohack/holdings/domain/: __init__.py  branch.py  copy.py
backend/src/bibliohack/holdings/infrastructure/: __init__.py
backend/src/bibliohack/holdings/interfaces/: __init__.py  cli.py
backend/src/bibliohack/identity/: __init__.py
backend/src/bibliohack/identity/application/: errors.py  ports.py
backend/src/bibliohack/identity/domain/: user.py
backend/src/bibliohack/identity/interfaces/: __init__.py
backend/src/bibliohack/interfaces/: __init__.py
backend/src/bibliohack/interfaces/cli/: __init__.py  app.py
backend/src/bibliohack/interfaces/http/: __init__.py  app.py  dependencies.py
backend/src/bibliohack/reading_history/: __init__.py
backend/src/bibliohack/reading_history/application/: __init__.py  dto.py  ports.py
backend/src/bibliohack/reading_history/domain/: __init__.py  import_job.py  shelf.py
backend/src/bibliohack/reading_history/infrastructure/: __init__.py
backend/src/bibliohack/reading_history/interfaces/: __init__.py  cli.py
backend/src/bibliohack/recommendations/: __init__.py
backend/src/bibliohack/shared/: __init__.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/availability/: test_availability_snapshot_repository.py  test_ingest_records_snapshots.py  test_status_mapping.py
backend/tests/catalog/: test_absysnet_urls.py  test_award_list.py  test_browse_http.py  test_canon.py  test_catalog_http.py  test_contributor.py  test_discover_via_search.py  test_embedding_text.py  test_enrich_canon_ratings.py  test_gateway.py  test_genre.py  test_huggingface_embedder.py  test_hybrid_search.py  test_isbn.py  test_literary_profile.py  test_match_canon_seed.py  test_media_filter.py  test_openlibrary_ratings.py  test_openrouter_query_rewriter.py  test_parser.py  test_parser_isbn.py  test_probe_titn_range.py  test_pub_year.py  test_record.py  test_refresh_canon_seed.py  test_relevance.py  test_resolve_canon_seed.py  test_rewrite_aware_search.py  test_scrape_one_task.py  test_scrape_one_task_resilience.py  test_scrape_task_repository.py  test_seed_backlist_chunk.py  test_seed_discovered_tasks.py  test_semantic_search.py  test_throttle.py  test_titn.py  test_wikidata_client.py
backend/tests/catalog/fixtures/: search_novedades.html  titn_1.html
backend/tests/contract/: test_openapi_contract.py
backend/tests/covers/: test_covers_http.py  test_filesystem_store.py  test_googlebooks_provider.py  test_pillow_processor.py  test_resolve_cover.py
backend/tests/holdings/: test_branch.py  test_branch_geo.py  test_branches_http.py  test_copy.py  test_library_scope_http.py
backend/tests/identity/: fakes.py  test_account_and_isolation_integration.py  test_argon2_hasher.py  test_auth_http.py  test_authenticate_user.py  test_delete_account.py  test_identity_repository_integration.py  test_register_user.py  test_user_domain.py  test_verify_and_reset.py
backend/tests/reading_history/: test_goodreads_csv_parser.py  test_import_http.py  test_import_job_integration.py  test_import_shelf.py  test_rematch_shelf.py  test_rematch_shelf_integration.py  test_resolve_unmatched_shelf.py  test_resolve_unmatched_shelf_integration.py  test_shelf_http.py  test_shelf_repository_integration.py
backend/tests/recommendations/: test_get_recommendations.py  test_openrouter_cold_start.py  test_openrouter_rationales.py  test_recommendations_http.py  test_recommendations_integration.py
backend/tests/shared/: fakes.py  test_entity.py  test_identifier.py  test_rate_limit.py  test_result.py  test_settings.py
docs/: migration.md  (+2 more)
(+286 files in other folders)
