[project]
name = "bibliohack"
version = "0.1.0"
description = "Reverse catalog and AI-driven recommender for the Andalusian public-library network."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "José Arcos" }]

dependencies = [
    # ───── HTTP layer ─────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # ───── Persistence ─────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",        # used by alembic (sync)
    "alembic>=1.14",
    "pgvector>=0.3",

    # ───── Observability ─────
    "structlog>=24.4",

    # ───── HTML parsing ─────
    # Used by the catalog parser. Small C-extension; we keep it in core deps
    # rather than [scraper] so the parser can be used outside the worker too
    # (e.g. re-parsing cached HTML from the API).
    "selectolax>=0.3.27",

    # ───── CLI ─────
    "typer>=0.13",
]

[project.scripts]
bibliohack = "bibliohack.interfaces.cli.app:cli"

[project.optional-dependencies]
# Scraping deps are heavy and only needed by the worker. Keep them opt-in.
# Note: after `uv sync --extra scraper`, run `make scraper-install-browsers`
# (or `uv run scrapling install`) to download the Camoufox browser binary.
scraper = [
    "httpx>=0.28",
    "scrapling>=0.2.97",
    # Transitive runtime deps Scrapling 0.4.x needs but doesn't pin in its
    # own metadata. Each one bit us in turn during the first manual fetch
    # — patchright, then msgspec, etc. Pinning them directly is the only
    # reliable way until upstream cleans up their extras.
    "curl-cffi>=0.7.0",
    "camoufox[geoip]>=0.4.0",
    "patchright>=1.49.0",
    "playwright>=1.49.0",
    "msgspec>=0.18.6",
    "tenacity>=9.0",
]

# Book-cover resolution (§7.5) — image fetch + processing. Opt-in (worker plane).
covers = [
    "httpx>=0.28",
    "pillow>=11",
]

# AI / embeddings are even heavier (torch). Opt-in.
ai = [
    "sentence-transformers>=3.3",
    "openai>=1.55",                # we'll point its base_url at OpenRouter
]

# Background workers
worker = [
    "dramatiq[redis]>=1.17",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.118",
    "testcontainers[postgres,redis]>=4.8",
    "schemathesis>=3.39",
    "respx>=0.21",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibliohack"]

# ────────────────────────────────────────────────────────────
# uv
# ────────────────────────────────────────────────────────────

[tool.uv]
default-groups = ["dev"]

# ────────────────────────────────────────────────────────────
# pytest
# ────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=bibliohack",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # SQLAlchemy 2.0 deprecations we don't control:
    "ignore::DeprecationWarning:sqlalchemy.*",
    # Starlette 1.2 deprecated httpx in favour of httpx2. We're sticking with
    # httpx for now; revisit when httpx2 is properly stable.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
markers = [
    "integration: tests that need real infra (postgres/redis) via testcontainers",
    "e2e: end-to-end tests against the running stack",
    "slow: tests that take noticeably longer; skipped by default in CI fast lane",
]

[tool.coverage.run]
source = ["src/bibliohack"]
branch = true
omit = [
    # Composition-root modules — exercised via integration / smoke tests,
    # not unit tests. Unit-testing them would mean mocking typer + signal
    # handlers + the whole DB session lifecycle, which is more pain than
    # information.
    "src/bibliohack/interfaces/http/app.py",
    "src/bibliohack/interfaces/cli/app.py",
    "src/bibliohack/catalog/interfaces/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
fail_under = 75

# ────────────────────────────────────────────────────────────
# Ruff
# ────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A solid default set; add/remove rules as you learn what bothers you.
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "N",           # pep8-naming
    "UP",          # pyupgrade
    "B",           # bugbear
    "A",           # builtins
    "C4",          # comprehensions
    "DTZ",         # datetimez (forbid naive datetimes)
    "EM",          # error messages (no f-strings in raise)
    "FA",          # future annotations
    "G",           # logging format
    "PIE",         # misc gotchas
    "PT",          # pytest style
    "RET",         # return
    "RUF",         # ruff-specific
    "S",           # bandit (security)
    "SIM",         # simplify
    "TCH",         # type-checking imports
    "TID",         # tidy imports
]
ignore = [
    "E501",   # line too long — handled by formatter
    "S101",   # assert allowed (we use pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PT011"]  # security checks + broad pytest.raises noise

[tool.ruff.lint.isort]
known-first-party = ["bibliohack"]

# ────────────────────────────────────────────────────────────
# Mypy
# ────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["bibliohack"]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_any_explicit = false
plugins = ["pydantic.mypy"]

# Domain and application layers stay strict.
# Infrastructure adapters often interact with untyped libs (jsoup-style HTML parsing,
# legacy SDKs); relax there as needed via per-module overrides.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true
